--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -10,56 +10,76 @@
 
 
   <div class="keys">
-    <div data-key="65" class="key">
+    <div data-key="65" id='65' class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
     </div>
-    <div data-key="83" class="key">
+    <div data-key="83" id='83' class="key">
       <kbd>S</kbd>
       <span class="sound">hihat</span>
     </div>
-    <div data-key="68" class="key">
+    <div data-key="68" id='68' class="key">
       <kbd>D</kbd>
       <span class="sound">kick</span>
     </div>
-    <div data-key="70" class="key">
+    <div data-key="70" id='70' class="key">
       <kbd>F</kbd>
       <span class="sound">openhat</span>
     </div>
-    <div data-key="71" class="key">
+    <div data-key="71" id='71' class="key">
       <kbd>G</kbd>
       <span class="sound">boom</span>
     </div>
-    <div data-key="72" class="key">
+    <div data-key="72" id='72' class="key">
       <kbd>H</kbd>
       <span class="sound">ride</span>
     </div>
-    <div data-key="74" class="key">
+    <div data-key="74" id='74' class="key">
       <kbd>J</kbd>
       <span class="sound">snare</span>
     </div>
-    <div data-key="75" class="key">
+    <div data-key="75" id='75' class="key">
       <kbd>K</kbd>
       <span class="sound">tom</span>
     </div>
-    <div data-key="76" class="key">
+    <div data-key="76" id='76' class="key">
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
   </div>
 
-  <audio data-key="65" src="sounds/clap.wav"></audio>
-  <audio data-key="83" src="sounds/hihat.wav"></audio>
-  <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
-  <audio data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="65" id='65' src="sounds/clap.wav"></audio>
+  <audio data-key="83" id='83' src="sounds/hihat.wav"></audio>
+  <audio data-key="68" id='68' src="sounds/kick.wav"></audio>
+  <audio data-key="70" id='70' src="sounds/openhat.wav"></audio>
+  <audio data-key="71" id='71' src="sounds/boom.wav"></audio>
+  <audio data-key="72" id='72' src="sounds/ride.wav"></audio>
+  <audio data-key="74" id='74' src="sounds/snare.wav"></audio>
+  <audio data-key="75" id='75' src="sounds/tom.wav"></audio>
+  <audio data-key="76" id='65' src="sounds/tink.wav"></audio>
 
 <script>
 
+function playAudio(e){
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+    if(!audio) return;
+    audio.currentTime = 0
+    audio.play()
+
+    key.classList.add('playing')
+  }
+
+  const removeTransition = (e) => {
+    if(e.propertyName !== 'transform') return;
+    
+    e.target.classList.remove('playing')
+  }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition))
+
+  window.addEventListener('keydown', playAudio)
 </script>
 
 
