--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -36,8 +36,8 @@
     }
 
     .clock {
-      width: 30rem;
-      height: 30rem;
+      width: 40rem;
+      height: 40rem;
       border: 20px solid white;
       border-radius: 50%;
       margin: 50px auto;
@@ -49,6 +49,7 @@
         inset 0 0 10px black,
         0 0 10px rgba(0,0,0,0.2);
     }
+
 
     .clock-face {
       position: relative;
@@ -63,13 +64,66 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform: rotate(40deg);
+      transform-origin: right;
+      border-bottom-left-radius: 50%;
+      border-top-left-radius: 50%;
+    }
+
+    .hour-hand{
+      width: 40%;
+      left: 35px;
+      height: 8px;
+    }
+
+    .second-hand{
+      background-color: red;
+      height: 3px;
+    }
+    .clock-face::after{
+      content: '';
+      position: absolute;
+      height: 20px;
+      width: 20px;
+      right: 47%;
+      top: 48%;
+      background-color: white;
+      border-radius: 50%;
     }
 
   </style>
 
   <script>
 
+    const secondHand = document.querySelector('.second-hand')
+    const minuteHand = document.querySelector('.min-hand')
+    const hourHand = document.querySelector('.hour-hand')
 
+
+
+
+    function moveHand(){
+      const now = new Date()
+      const second = now.getSeconds()
+
+    
+
+      const secondCount = ((second / 60) * 360)
+      secondHand.style.transform = `rotate(${secondCount + 90}deg)`
+      
+      const minute = now.getMinutes()
+      const minuteCount = ((minute / 60) * 360) + ((second/60)*6) + 90;
+      minuteHand.style.transform = `rotate(${minuteCount}deg)`
+      // console.log(minuteCount)
+
+      const hour = now.getHours()
+      const hourCount = ((hour / 12) * 360) + ((minute / 60) * 30) + 90;
+      hourHand.style.transform = `rotate(${hourCount}deg)`
+    }
+
+    setInterval(moveHand, 1000);  
+
+    moveHand()
   </script>
 </body>
 </html>
