--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
   <div class="controls">
-    <label for="spacing">Spacing:</label>
-    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+    
+      <div>
+        <label for="spacing">Spacing:</label>
+      <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+      <span id="space-value" class="value"></span>
+      </div>
 
-    <label for="blur">Blur:</label>
-    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
+      <div>
+        <label for="blur">Blur:</label>
+      <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
+      <span id="blur-value" class="value"></span>
+      </div>
 
-    <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#ffc600">
+    
+      <div>
+        <label for="base">Base Color:</label>
+      <input id="base" type="color" name="base" value="#ffc600">
+      <span id="base-value" class="value"></span>
+      </div>
   </div>
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+    }
 
     /*
       misc styles, nothing to do with CSS variables
     */
+
+    .controls {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    img {
+      padding: var(--spacing);
+      filter: blur(var(--blur));
+      background-color: var(--base);
+    }
+
+    .value{
+      font-size: 2rem;
+    }
+
+
+    .hl {
+      color: var(--base);
+    }
 
     body {
       text-align: center;
@@ -46,7 +87,35 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll('.controls input')
+    const spacing = document.querySelector("#space-value")
+    const blury = document.querySelector("#blur-value")
+    const base = document.querySelector("#base-value")
+
+    spacing.innerHTML = '10px';
+    blury.innerHTML = '10px';
+    base.innerHTML = '#ffc600';
+
+
+    function handleUpdate() {
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix)
+      if (this.name === 'spacing') {
+        spacing.innerHTML = this.value + suffix
+      }
+      if (this.name === 'blur') {
+        blury.innerHTML = this.value + suffix
+      }
+      if (this.name === 'base') {
+        base.innerHTML = this.value
+      }
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate))
+    inputs.forEach(input => input.addEventListener('input', handleUpdate))
+
   </script>
 
 </body>
+
 </html>
